<resources>
    <string name="app_name">Учет средств на карте</string>
    <string name="file_save">Сохранить настройки</string>
    <string name="file_read">Загрузить настройки</string>
    <string name="action_settings">Настройки</string>
    <string name="delitem">Удалить группу</string>
    <string name="item">Просмотр группы</string>
    <string name="menu_back">Назад</string>
    <string name="cancel">Отмена</string>
    <string name="ok">ОК</string>
    <string name="rename">Переименовать</string>
    <string name="title_activity_my_item">MyItemActivity</string>
    <string name="delelem">Удалить элемент</string>
    <string name="moveelem">Переместить элемент</string>
    <string name="moveelem_other">Переместить в Прочее</string>
    <string name="date">Дата</string>
    <string name="add">Добавить</string>
    <string name="prihod">Приход:</string>
    <string name="rashod">Расход:</string>
    <string name="itog">Итого:</string>
    <string name="HideNullItems">Скрывать элементы с нулевым значением</string>
    <string name="ShowCurenncy">Отображать символ валюты</string>
    <string name="title_activity_my_sms">MySmsActivity</string>
</resources>
